# iced-user-management

./: .gitignore  Cargo.toml
.sqlx/: query-1745b1992b52abc90d369ec95de7eb377b747bcbd85d6c0ce24e72fba593a3ac.json  query-61c1d70699654a6efcedd7d0404c9b3ab3166a6826fc07c02aa31f4537ac9768.json  query-64a841f0e8807a1b229228d227665cb4b3c2a1b1f26ff328cef2778010ff4d26.json  query-b8260f585a059ab784012abfaefedf8157ea692086dba99d49df71eae3d7d1ee.json  query-b95eeddedd6a65567136fbca42fd9152beb1ee7d754d979e37fedf29504fbb7e.json  query-df9a47f2291cec0d8528477641c2840882a416a2fed33f80ac3d1372aba439a5.json  query-f8783fc4e0d5e73a00a7a4dfe42eb59c99a2a8d69be80dbc74de9cac9c0329fa.json
migrations/: 20240101000001_create_tables.sql
src/: app.rs  main.rs  message.rs  view.rs
src/domain/: entity.rs  job.rs  mod.rs  organization.rs  repositories.rs  user.rs
src/domain/services/: entity_service.rs  job_service.rs  mod.rs  organization_service.rs  user_service.rs
src/infrastructure/: database.rs  entity_manager.rs  entity_state.rs  job_repository.rs  mod.rs  organization_repository.rs  user_repository.rs
